--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,11 +1,8 @@
 .footer__link {
   font-size: 16px;
   line-height: 18px;
-  color: #FFFFFF;
+  color: #FFF;
   transition: opacity .1s linear;
-}
-
-.footer__link:link {
   text-decoration: none;
 }
 
