--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,15 +1,8 @@
 .header__lang-link {
   font-size: 24px;
   line-height: 28px;
-  color: #FFFFFF;
-}
-
-.header__lang-link:link {
+  color: #FFF;
   text-decoration: none;
-}
-
-.header__lang-link:first-child {
-  text-decoration: underline;
 }
 
 @media all and (max-width: 767px) {
