--- a/blocks/place/__upper-flex-container/place__upper-flex-container.css
+++ b/blocks/place/__upper-flex-container/place__upper-flex-container.css
@@ -10,20 +10,20 @@
 
 @media all and (max-width: 1279px) {
   .place__upper-flex-container {
-    gap: 0 32px;
+    column-gap: 32px;
   }
 }
 
 @media all and (max-width: 1023px) {
   .place__upper-flex-container {
-    gap: 0 28px;
+    column-gap: 28px;
   }
 }
 
 @media all and (max-width: 767px) {
   .place__upper-flex-container {
     flex-direction: column;
-    gap: 32px 0;
+    row-gap: 32px;
     justify-content: flex-start;
     align-items: flex-start;
   }
