--- a/blocks/place/__website/__link/place__link.css
+++ b/blocks/place/__website/__link/place__link.css
@@ -4,14 +4,7 @@
   line-height: 22px;
   margin-top: 12px;
   transition: opacity .1s linear;
-}
-
-.place__link:link {
-  color: #FFFFFF;
-}
-
-.place__link:visited {
-  color: #FFFFFF;
+  color: #FFF;
 }
 
 .place__link:hover {
