--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -5,7 +5,7 @@
   padding-top: 92px;
   padding-bottom: 92px;
   align-items: center;
-  gap: 80px 0;
+  gap: 80px;
 }
 
 @media (max-width: 1023px) {
