--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,15 +1,13 @@
 .cover__link {
-  display: block;
   width: 100%;
   height: 100%;
-  color: inherit;
   text-decoration: none;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   z-index: 3;
-  color: #FFFFFF;
+  color: #FFF;
   padding-left: 104px;
   padding-right: 104px;
 }
