After the second iteration

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,8 +2,9 @@
   max-width: 1184px;
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
   padding-top: 92px;
-  padding-bottom: 24px;
+  padding-bottom: 15px;
 }
 
 @media all and (max-width: 1181px) {
@@ -29,5 +30,6 @@
     padding-left: 16px;
     padding-right: 16px;
     gap: 48px 0;
+    align-items: flex-start;
   }
 }
