--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,6 +1,6 @@
 .cover__link {
   width: 100%;
-  height: 100%;
+  min-height: 740px;
   text-decoration: none;
   display: flex;
   flex-direction: column;
@@ -8,13 +8,40 @@
   align-items: center;
   z-index: 3;
   color: #FFF;
-  padding-left: 104px;
-  padding-right: 104px;
+}
+
+@media all and (max-width: 1279px) {
+  .cover__link {
+    min-height: 640px;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .cover__link {
+    min-height: 480px;
+  }
 }
 
 @media all and (max-width: 767px) {
   .cover__link {
-    padding-left: 16px;
-    padding-right: 16px;
+    min-height: 390px;
+  }
+}
+
+@media all and (max-width: 720px) {
+  .cover__link {
+    min-height: 320px;
+  }
+}
+
+@media all and (max-width: 540px) {
+  .cover__link {
+    min-height: 250px;
+  }
+}
+
+@media all and (max-width: 424px) {
+  .cover__link {
+    min-height: 200px;
   }
 }
