--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,17 +1,18 @@
 .cover__subtitle {
   margin: 0;
   max-width: 360px;
-  margin-top: 32px;
+  margin-top: 33px;
   font-size: 18px;
   line-height: 22px;
   font-weight: 400;
   z-index: 3;
 }
 
-@media all and (max-width: 768px) {
+@media all and (max-width: 767px) {
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
     margin-top: 16px;
+    text-align: center;
   }
 }
