--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,7 +3,7 @@
   padding-top: 28px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   flex: 1;
 }
 
@@ -23,7 +23,7 @@
 
 @media all and (max-width: 767px) {
   .header {
-    padding-top: 16px;
+    padding-top: 11px;
     padding-left: 16px;
     padding-right: 16px;
   }
