--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,12 +3,18 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding-top: 92px;
+  padding-top: 93px;
+}
+
+@media all and (max-width: 1279px) {
+  .intro {
+    max-width: 928px;
+  }
 }
 
 @media all and (max-width: 1023px) {
   .intro {
-    padding-top: 88px;
+    padding-top: 89px;
   }
 }
 
@@ -17,4 +23,5 @@
     padding-top: 64px;
   }
 }
+
 
