--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,3 +5,9 @@
   justify-content: center;
   align-items: center;
 }
+
+@media all and (max-width: 1279px) {
+  .lead {
+    max-width: 928px;
+  }
+}
