--- a/blocks/place/__image-container/place__image-container.css
+++ b/blocks/place/__image-container/place__image-container.css
@@ -1,8 +1,20 @@
 .place__image-container {
-  flex-basis: 50%;
-  flex: 1;
+  flex: 0 1 460px;
 }
 
+@media all and (max-width: 1279px) {
+  .place__image-container {
+    flex-grow: 1;
+    flex-basis: 440px;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .place__image-container {
+    flex-grow: 1;
+    flex-basis: 340px;
+  }
+}
 
 @media all and (max-width: 767px) {
   .place__image-container {
