--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,14 +1,35 @@
 .place__paragraphs {
-  flex-basis: 50%;
   display: flex;
   flex-direction: column;
   gap: 26px 0;
-  flex: 1;
+  flex: 0 1 484px;
+}
+
+@media all and (max-width: 1279px) {
+  .place__paragraphs {
+    flex-grow: 1;
+    flex-basis: 456px;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .place__paragraphs {
+    flex-grow: 1;
+    flex-basis: 352px;
+    row-gap: 24px;
+  }
 }
 
 @media all and (max-width: 767px) {
   .place__paragraphs {
     align-self: center;
-      max-width: 100%;
+    max-width: 100%;
+  }
+}
+
+@media all and (max-width: 425px) {
+  .place__paragraphs {
+    padding-left: 16px;
+    padding-right: 16px;
   }
 }
