--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,9 +1,36 @@
 .place__website {
   display: flex;
   flex-direction: column;
-  flex-basis: 50%;
-  gap: 12px 0;
+  gap: 5.5px 0;
   align-items: flex-start;
   justify-content: flex-end;
-  flex: 1;
+  flex: 0 1 456px;
+}
+
+@media all and (max-width: 1279px) {
+  .place__website {
+    flex-grow: 1;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .place__website {
+    flex-grow: 1;
+    flex-basis: 352px;
+    row-gap: 14.5px;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .place__website {
+    flex-grow: 1;
+    flex-basis: 100%;
+  }
+}
+
+@media all and (max-width: 425px) {
+  .place__website {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
 }
