--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,9 +2,17 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  gap: 48px 0;
 }
 
-.place:last-child {
-  padding-bottom: 0;
+@media all and (max-width: 1023px) {
+  .place {
+    row-gap: 46px;
+  }
 }
 
+@media all and (max-width: 767px) {
+  .place {
+    row-gap: 22px;
+  }
+}
