--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,27 +3,37 @@
   display: flex;
   flex-direction: column;
   padding-top: 92px;
-  padding-bottom: 92px;
+  padding-bottom: 88.5px;
   align-items: center;
-  gap: 80px;
+  gap: 76.5px;
+  padding-left: 48px;
+  padding-right: 48px;
 }
 
-@media (max-width: 1023px) {
+@media all and (max-width: 1023px) {
   .places {
-    padding-top: 88px;
-    padding-bottom: 90px;
+    padding-top: 92px;
+    padding-bottom: 88px;
     padding-left: 24px;
     padding-right: 24px;
-    gap: 73px;
+    gap: 71px;
   }
 }
 
-@media (max-width: 767px) {
+@media all and (max-width: 767px) {
   .places {
-    gap: 50px;
-    padding-top: 64px;
+    gap: 57px;
+    padding-top: 73px;
     padding-bottom: 66px;
     padding-left: 16px;
     padding-right: 16px;
+  }
+}
+
+@media all and (max-width: 425px) {
+  .places {
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
